Fix for BZ766490: Modified dialog message CSS and javascript to truncate long messages and added a margin to prevent overlap with close button

--- a/site/app/stylesheets/partials/_page.scss
+++ b/site/app/stylesheets/partials/_page.scss
@@ -175,7 +175,7 @@ a.more {
   background-repeat: no-repeat;
   background-position: 1em center;
   padding: .5em 0 .5em 2em;
-  margin: 0 0 1em;
+  margin: 0 50px 1em;
   font: {
     weight: bold;
   }
